<resources>
    <string name="app_name">CameraTrial</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_camera">Camera</string>
    <string name="title_timeline">Timeline</string>
    <string name="following">Following</string>
    <string name="zero_value">0</string>
    <string name="followers">Followers</string>

    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="title_activity_image_adjustment">ImageAdjustmentActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="warmth">Warmth</string>
    <string name="saturation">Saturation</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="save">Save</string>
    <string name="save_image_dialog_message">Do you want to save these changes?</string>
    <string name="save_dialog_title">Save Changes</string>
    <string name="camera_button">Camera Button</string>
    <string name="title_activity_full_image">FullImageActivity</string>>
</resources>