<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:brightness="0.4"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/label_warmth"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/warmth"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_brightness"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/brightness"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/label_warmth"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_contrast"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/contrast"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/label_brightness"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_saturation"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/saturation"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/label_contrast"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/seekbar_labels_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="label_saturation,label_warmth,label_brightness,label_contrast"
        tools:layout_editor_absoluteX="411dp" />

    <SeekBar
        android:id="@+id/seekbar_warmth"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:max="90"
        android:min="0"
        android:progress="30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/seekbar_labels_barrier" />

    <SeekBar
        android:id="@+id/seekbar_brightness"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@id/seekbar_warmth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/seekbar_labels_barrier" />

    <SeekBar
        android:id="@+id/seekbar_contrast"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@id/seekbar_brightness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/seekbar_labels_barrier" />

    <SeekBar
        android:id="@+id/seekbar_saturation"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:max="100"
        android:min="0"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@id/seekbar_contrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/seekbar_labels_barrier" />


</androidx.constraintlayout.widget.ConstraintLayout>